finally fix that fucking scrollbar

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -30,7 +30,7 @@ html, body {
   font-family: 'Poppins', sans-serif;
   height: 100%;
   width: 100vw;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
 
 p {
